--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							</div>
 						</section>
                                                 <section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/pic03.jpeg" alt="" /></div><div class="content">
 								<h2>Experience at CMI</h2>
 								<p> In 2020, when almost everyone lost their will to the atrocity of pandemic, in one fine afternoon, I got a call letter 
                                                                     from Chennai Mathematical Institute. It was one of the most happiest days in my life. Something, which I was dreaming for
