--- a/Personal.html
+++ b/Personal.html
@@ -28,8 +28,8 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="publication.html">Publications and Talks</a></li>
-											<li><a href="teaching.html">Teaching Experience</a></li>
-											<li><a href="personal.html">Personal</a></li>
+											<li><a href="Teaching.html">Teaching Experience</a></li>
+											<li><a href="Personal.html">Personal</a></li>
 											<!-- <li><a href="#"></a></li> -->
 										</ul>
 									</div>
