Bold fonts changed

--- a/Personal.html
+++ b/Personal.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Publication and Talks</title>
+		<title>Personal</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Shiuli Subhra Ghosh</a></h1>
+						<h1 style = "font-weight: normal"><a href="index.html">Shiuli Subhra Ghosh</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -28,8 +28,8 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="publication.html">Publications and Talks</a></li>
-											<li><a href="teaching.html">Teaching Experience</a></li>
-											<li><a href="personal.html">Personal</a></li>
+											<li><a href="Teaching.html">Teaching Experience</a></li>
+											<li><a href="Personal.html">Personal</a></li>
 											<!-- <li><a href="#"></a></li> -->
 										</ul>
 									</div>
@@ -41,13 +41,13 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Personal</h2>
+							<h2 style = "font-weight: normal">Personal</h2>
 							<p>After all the time... Always...</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<h3>Personal Photos</h3>
+								<h3 style = "font-weight: normal">Personal Photos</h3>
 								<p> Coming Soon....
 								</p>
 
@@ -55,7 +55,7 @@
 
 								<hr />
 
-								<h4>Music Videos</h4>
+								<h4 style = "font-weight: normal">Music Videos</h4>
 								<p> Coming Soon....
 
                                                                 </p>
