--- a/publication.html
+++ b/publication.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Shiuli Subhra Ghosh</a></h1>
+						<h1 style = "font-weight: normal"><a href="index.html">Shiuli Subhra Ghosh</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -28,8 +28,8 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="publication.html">Publications and Talks</a></li>
-											<li><a href="teaching.html">Teaching Experience</a></li>
-											<li><a href="personal.html">Personal</a></li>
+											<li><a href="Teaching.html">Teaching Experience</a></li>
+											<li><a href="Personal.html">Personal</a></li>
 											<!-- <li><a href="#"></a></li> -->
 										</ul>
 									</div>
@@ -41,13 +41,13 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Papers, Publications and Talks</h2>
+							<h2 style = "font-weight: normal">Papers, Publications and Talks</h2>
 							<p>More about my research and interests...</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<h3>Publications</h3>
+								<h3 style = "font-weight: normal">Publications</h3>
 								<p><li>S.Sarkar, A.Ghosh, S.S Ghosh <b>Design of IMC & IMC Derived PID Controller for Interleaved Boost Converter</b>, 
                                                                        IEEE Region 10 International Conference (TENCON 2020), Osaka (Japan), 16-19 Nov, 2020. We new Internal Model Control 
                                                                        Architecture and Internal Model Control Derived PID Architecture for Interleaved Boost Converter and compared it
@@ -62,7 +62,7 @@
 
 								<hr />
 
-								<h4>Talks</h4>
+								<h3 style = "font-weight: normal">Talks</h3>
 								<p><li><b>01 July 2021</b>, group talk on <a href= "https://github.com/bonnya15/Visualizing-Google-Playstore-App-Data/blob/main/Big\%20Data\%20Project\%20Presentation.pdf"><b> "Visualization of Google Play Store App Data"</b>, CMI, India.
                                                                    </li>
                                                                    <li><b>01 July 2021</b>, group talk on <a href= "https://github.com/bonnya15/Efficient-Algorithms-for-Finding-Strong-RRQR-Factorizations/blob/main/Linear_Algebra_Project_Presentation.pdf"><b> "Efficient Algorithms for Finding Strong RRQR Factorization"</b>, CMI, India.
