Line breaks added in Talks section

--- a/publication.html
+++ b/publication.html
@@ -63,14 +63,14 @@
 								<hr />
 
 								<h3 style = "font-weight: normal">Talks</h3>
-								<p><li><b>01 July 2021</b>, group talk on <a href= "https://github.com/bonnya15/Visualizing-Google-Playstore-App-Data/blob/main/Big\%20Data\%20Project\%20Presentation.pdf"><b> "Visualization of Google Play Store App Data"</b>, CMI, India. <br />
+								<p><li><b>01 July 2021</b>, group talk on <a href= "https://github.com/bonnya15/Visualizing-Google-Playstore-App-Data/blob/main/Big\%20Data\%20Project\%20Presentation.pdf"><b> "Visualization of Google Play Store App Data"</b>, CMI, India. 
                                                                    </li>
-                                                                   <li><b>01 July 2021</b>, group talk on <a href= "https://github.com/bonnya15/Efficient-Algorithms-for-Finding-Strong-RRQR-Factorizations/blob/main/Linear_Algebra_Project_Presentation.pdf"><b> "Efficient Algorithms for Finding Strong RRQR Factorization"</b>, CMI, India. <br />
-                                                                   </li>
-                                                                   <li><b>29 May 2021</b>, talk on <b> "Learning Machines to Machine Learning"</b> organised by SAI Cell NIT Durgapur, India. <br />
-                                                                   </li>
-                                                                   <li><b>27 Dec 2020</b>, professional talk at <b>NCQC 2020</b> (National Convention on Quality Concepts), <b> Topic:"Lean Quality Circle Project on Energy Optimization Through The Development of Energy Monitoring System"</b>. <br />
-                                                                   </li>
+                                                                   <li><b>01 July 2021</b>, group talk on <a href= "https://github.com/bonnya15/Efficient-Algorithms-for-Finding-Strong-RRQR-Factorizations/blob/main/Linear_Algebra_Project_Presentation.pdf"><b> "Efficient Algorithms for Finding Strong RRQR Factorization"</b>, CMI, India. 
+                                                                   </li> <br />
+                                                                   <li><b>29 May 2021</b>, talk on <b> "Learning Machines to Machine Learning"</b> organised by SAI Cell NIT Durgapur, India. 
+                                                                   </li> <br />
+                                                                   <li><b>27 Dec 2020</b>, professional talk at <b>NCQC 2020</b> (National Convention on Quality Concepts), <b> Topic:"Lean Quality Circle Project on Energy Optimization Through The Development of Energy Monitoring System"</b>. 
+                                                                   </li> <br />
                                                                    <li><b>19 June 2020</b>, professional talk at <b>CII Energy Efficiency Circle competition, 2020</b> in the category of <b> Best Energy Efficient Organisation</b>, CII, India.
                                                                    </li>
 
