Some text updates

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 I have completed my B.Tech in Electrical Engineering from National Institute of Technology, Durgapur in 2018.
                                 After graduation I worked with Jindal Stainless Limited as an Associate Manager at Cold Rolling Mill Electrical and Automation Department
                                 for two and a half years. <br /> <br /> <br />
-                                I am also a singer by passion. I have been learning Indian Classical Music since my childhood. I usually spend my leasure time playing piano,
+                                I am also a singer by passion. I have been learning Indian Classical Music since my childhood. I usually spend my leisure time playing piano,
                                 reading story books and observing nature.
 
                                 </p>
