--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						</section>
                                                 <section class="spotlight">
 							<div class="image"><img src="images/pic03.jpeg" alt="" /></div><div class="content">
-								<h2 style = "font-weight: normal">Experience at CMI</h2>
+								<h2 style = "font-weight: normal">CMI Diaries</h2>
 
 								<p> In 2020, when almost everyone lost their will to the atrocity of pandemic, in one fine afternoon, I got a call letter
                                                                     from Chennai Mathematical Institute. It was one of the most happiest days in my life. Something, which I was dreaming for
