--- a/publication.html
+++ b/publication.html
@@ -63,7 +63,7 @@
 								<hr />
 
 								<h3 style = "font-weight: normal">Talks</h3>
-								<p><li><b>01 July 2021</b>, group talk on <a href= "https://github.com/bonnya15/Visualizing-Google-Playstore-App-Data/blob/main/Big\%20Data\%20Project\%20Presentation.pdf"><b> "Visualization of Google Play Store App Data"</b>, CMI, India. 
+								<p><li><b>01 July 2021</b>, group talk on <a href= "https://github.com/bonnya15/Visualizing-Google-Playstore-App-Data/blob/main/Big%20Data%20Project%20Presentation.pdf"><b> "Visualization of Google Play Store App Data"</b>, CMI, India. 
                                                                    </li><br />
                                                                    <li><b>01 July 2021</b>, group talk on <a href= "https://github.com/bonnya15/Efficient-Algorithms-for-Finding-Strong-RRQR-Factorizations/blob/main/Linear_Algebra_Project_Presentation.pdf"><b> "Efficient Algorithms for Finding Strong RRQR Factorization"</b>, CMI, India. 
                                                                    </li> <br />
